--- a/app/templates/stochastic_mesh.html
+++ b/app/templates/stochastic_mesh.html
@@ -15,6 +15,10 @@
           <a href="{{ url_for('routes.stochastic_mesh', section='plot') }}"
              class="sidebar-link {% if section=='plot' %}active{% endif %}">Wykres 1</a>
         </li>
+        <li>
+          <a href="{{ url_for('routes.stochastic_mesh', section='plot2') }}"
+             class="sidebar-link {% if section=='plot' %}active{% endif %}">Wykres 2</a>
+        </li>
       </ul>
     </nav>
   </aside>
@@ -38,8 +42,19 @@
             Metoda ta dobrze sprawdza się przy ograniczonej liczbie kroków czasowych, ale może być kosztowna obliczeniowo.
         </p>
     {% elif section == "plot" %}
-      <h2>Wykres 1</h2>
-      <p>(Tu wstaw obrazek lub wykres)</p>
+      <img 
+        src="{{ url_for('static', filename='images/mesh.jpeg') }}" 
+        alt="Wykres 1" 
+        style="max-width:100%; border:1px solid #ddd; border-radius:8px; margin-top:1em;">
+    {% elif section == "plot2" %}
+      <img 
+        src="{{ url_for('static', filename='images/comp.jpeg') }}" 
+        alt="Wykres 1" 
+        style="max-width:100%; border:1px solid #ddd; border-radius:8px; margin-top:1em;">
+        <img 
+        src="{{ url_for('static', filename='images/comp2.jpeg') }}" 
+        alt="Wykres 1" 
+        style="max-width:100%; border:1px solid #ddd; border-radius:8px; margin-top:1em;">
     {% else %}
       <p>Wystąpił błąd. Przejdź do innej karty.</p>
     {% endif %}
